[package]
name = "sn_ringct"
version = "0.1.0"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_ringct"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]
description = "A pure-Rust implementation of Ring Confidential Transactions"
edition = "2021"

[dependencies]
thiserror = "1"
tiny-keccak = { version = "2.0", features = ["sha3"] }
sn_bulletproofs = "0.1.0"
serde = { version = "1.0.130", optional = true }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
