[package]
name = "bls_ringct"
version = "0.2.1"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/maidsafe/bls_ringct"
categories = ["cryptography"]
keywords = ["cryptography", "crypto"]
description = "A pure-Rust implementation of Ring Confidential Transactions"
edition = "2021"

[dependencies]
bls_bulletproofs = "0.2.0"
serde = { version = "1.0.130", optional = true }
thiserror = "1"
tiny-keccak = { version = "2.0", features = ["sha3"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
