[package]
name = "bls_ringct"
version = "1.1.1"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/maidsafe/bls_ringct"
categories = [ "cryptography" ]
keywords = [ "cryptography", "crypto" ]
description = "A pure-Rust implementation of Ring Confidential Transactions"
edition = "2021"

[dependencies]
bls_bulletproofs = "0.2.0"
thiserror = "1"

  [dependencies.serde]
  version = "1.0.130"
  optional = true

  [dependencies.tiny-keccak]
  version = "2.0"
  features = [ "sha3" ]
